# OmegaWebServices

./: CMakeLists.txt  Kconfig  README.md  idf_component.yml
cmake/: ESP32xx.cmake  x86_64.cmake
docs/test-scripts/: websocket-server.py
examples/Captive-Portal/main/: idf_component.yml
examples/Client-WebSocket/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/Client-WebSocket/main/: main.cpp
examples/ESP-Captive-Portal/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/ESP-Captive-Portal/main/: main.c
examples/ESP-GET-request/main/: main.cpp
examples/ESP-MQTT/: CMakeLists.txt
examples/ESP-MQTT-Throughput/: sdkconfig.old
examples/ESP-MQTT-Throughput/main/: main.cpp
examples/ESP-MQTT/main/: idf_component.yml  main.cpp
examples/ESP-POST-request/main/: main.cpp
examples/ESP-WSClient/: sdkconfig.old
examples/ESP-WSClient-Throughput/: partitions.csv  sdkconfig.old
examples/ESP-WSClient-Throughput/main/: idf_component.yml
examples/ESP-WSClient/main/: main.cpp
examples/GET-request/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/GET-request/main/: main.cpp
examples/MQTT/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
examples/MQTT-Throughput/: CMakeLists.txt  sdkconfig
examples/MQTT-Throughput/main/: main.cpp
examples/MQTT/main/: idf_component.yml  main.cpp
examples/POST-request/: CMakeLists.txt
examples/POST-request/main/: main.cpp
examples/WebSocketClient-Throughput/: sdkconfig  sdkconfig.defaults
examples/WebSocketClient-Throughput/main/: main.cpp
examples/unit-test/: CMakeLists.txt  sdkconfig
examples/unit-test/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/x86_64-GET-request/: CMakeLists.txt
examples/x86_64-GET-request/main/: main.cpp
examples/x86_64-MQTT/: CMakeLists.txt
examples/x86_64-MQTT/main/: CMakeLists.txt  main.cpp
extra/scripts/node/mqtt-server/: mqtt-server.js  package.json
extra/scripts/node/web-server/: package.json  web-server.js
extra/scripts/node/websocket-server/: websocket-server.js
inc/OmegaWebServices/: Authentication.hpp  ESP32xx.hpp  Get.hpp  HardwareBase.hpp  Header.hpp  MQTT.hpp  Post.hpp  Request.hpp  RequestBase.hpp  Response.hpp  WebServices.hpp  WebSocket.hpp  x86_64.hpp
src/: ESP32xx.cpp  Header.cpp  MQTT.cpp  Request.cpp  WebServices.cpp  WebSocket.cpp  x86_64.cpp
test/: CMakeLists.txt  GET.cpp
test/mqtt-server/: mqtt-server.js  package.json
test/web-server/: web-server.js
test/web-server/uploads/: data.txt
test/websocket-server/: websocket-server.js
